# wheel_quadruped_ros2_control-main

./: README.md
commands/: README.md
commands/joystick_input/: README.md  package.xml
commands/joystick_input/src/: JoystickInput.cpp
controllers/ocs2_quadruped_controller/: CMakeLists.txt  README.md  package.xml
controllers/ocs2_quadruped_controller/include/ocs2_quadruped_controller/FSM/: StateOCS2.h
controllers/ocs2_quadruped_controller/include/ocs2_quadruped_controller/control/: CtrlComponent.h  GaitManager.h  TargetManager.h
controllers/ocs2_quadruped_controller/include/ocs2_quadruped_controller/estimator/: FromOdomTopic.h  GroundTruth.h  LinearKalmanFilter.h  StateEstimateBase.h
controllers/ocs2_quadruped_controller/include/ocs2_quadruped_controller/interface/: LeggedInterface.h  SwitchedModelReferenceManager.h
controllers/ocs2_quadruped_controller/include/ocs2_quadruped_controller/wbc/: WbcBase.h
controllers/ocs2_quadruped_controller/launch/: gazebo.launch.py  mujoco.launch.py
controllers/ocs2_quadruped_controller/src/: Ocs2QuadrupedController.cpp  Ocs2QuadrupedController.h
controllers/ocs2_quadruped_controller/src/FSM/: StateOCS2.cpp
controllers/ocs2_quadruped_controller/src/control/: CtrlComponent.cpp  GaitManager.cpp  TargetManager.cpp
controllers/ocs2_quadruped_controller/src/estimator/: FromOdomTopic.cpp  GroundTruth.cpp  LinearKalmanFilter.cpp  StateEstimateBase.cpp
controllers/ocs2_quadruped_controller/src/interface/: LeggedInterface.cpp  LeggedRobotPreComputation.cpp  SwitchedModelReferenceManager.cpp
controllers/ocs2_quadruped_controller/src/interface/constraint/: EndEffectorLinearConstraint.cpp  FrictionConeConstraint.cpp  NormalVelocityConstraintCppAd.cpp  SwingTrajectoryPlanner.cpp  WheelRollingVelocityConstraintCppAd.cpp  ZeroForceConstraint.cpp  ZeroVelocityConstraintCppAd.cpp
controllers/ocs2_quadruped_controller/src/wbc/: HierarchicalWbc.cpp  WbcBase.cpp  WeightedWbc.cpp
controllers/rl_quadruped_controller/: README.md  package.xml
controllers/rl_quadruped_controller/launch/: gazebo.launch.py  mujoco.launch.py
controllers/rl_quadruped_controller/src/: RlQuadrupedController.cpp  RlQuadrupedController.h
controllers/rl_quadruped_controller/src/FSM/: StateRL.cpp
controllers/rl_quadruped_controller/src/common/: ObservationBuffer.cpp  ObservationBuffer.h
controllers/rl_quadruped_controller/src/control/: Estimator.cpp  LowPassFilter.cpp
controllers/rl_quadruped_controller/src/robot/: QuadrupedRobot.cpp  RobotLeg.cpp
descriptions/: README.md
descriptions/my_dog/bw_description/: CMakeLists.txt  README.md  package.xml
descriptions/my_dog/bw_description/config/: gazebo.yaml  robot_control.yaml
descriptions/my_dog/bw_description/config/himloco/: config.yaml  himloco.pt  himloco_pro.pt  himlocohigh.pt
descriptions/my_dog/bw_description/config/legged_gym/: config.yaml
descriptions/my_dog/bw_description/config/ocs2/: gait.info  reference.info  task.info
descriptions/my_dog/bw_description/config/robot_lab/: config.yaml  policy10.pt  policy11.pt  policy12.pt  policy13.pt  policy_symmetric1.pt  policydelay.pt  policydelay1.pt  policydelay2.pt  policydelay3.pt  policydelaymy.pt  policymy.pt
descriptions/my_dog/bw_description/launch/: gazebo_rl_control.launch.py  visualize.launch.py
descriptions/my_dog/bw_description/meshes/: base.stl  calf.stl  calf_mirror.stl  hip.stl  thigh.stl  thigh_mirror.stl  wheel.stl  wheel_mirror.stl
descriptions/my_dog/bw_description/urdf/: robot.urdf
descriptions/my_dog/bw_description/xacro/: const.xacro  gazebo.xacro  gazebo_classic.xacro  leg.xacro  robot.xacro  ros2_control.xacro  transmission.xacro
hardwares/hardware_unitree_sdk2/: CMakeLists.txt  README.md  package.xml
hardwares/hardware_unitree_sdk2/include/hardware_unitree_sdk2/: HardwareUnitree.h  unitree_udp_wire.h
hardwares/hardware_unitree_sdk2/launch/: visualize.launch.py
hardwares/hardware_unitree_sdk2/src/: HardwareUnitree.cpp  crc32.h  udp_mcu_mock.cpp
libraries/controller_common/: CMakeLists.txt
libraries/controller_common/include/controller_common/: CtrlInterfaces.h
libraries/controller_common/src/FSM/: BaseFixedStand.cpp  StateFixedDown.cpp
libraries/gz_quadruped_playground/: package.xml
libraries/gz_quadruped_playground/launch/: gazebo.launch.py  ocs2.launch.py
(+6 files in other folders)
