<?xml version="1.0"?>
<package format="2">
    <name>gz_quadruped_playground</name>
    <version>0.0.0</version>
    <description>The gazebo playground for quadruped robots</description>

    <maintainer email="biao876990970@hotmail.com">biao</maintainer>
    <license>Apache-2.0</license>

    <exec_depend>xacro</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>imu_sensor_broadcaster</exec_depend>
    <exec_depend>gz_quadruped_hardware</exec_depend>
    <exec_depend>bw_description</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>ocs2_quadruped_controller</exec_depend>
    <exec_depend>ros_gz_bridge</exec_depend>
    <exec_depend>ros_gz_image</exec_depend>
    <exec_depend>ros_gz_sim</exec_depend>
    <exec_depend>rviz2</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
